fix: Make homepage title 4 rem so doesn't wrap over image, update some language

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -54,7 +54,7 @@ h1 {
 
 	@media (min-width: $mobile-break) {
 		line-height: 100px;
-		font-size: 8rem;
+		font-size: 4rem;
 	}
 }
 
